k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: kong
  labels:
      name: myingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui
            port:
              number: 8080
